# enum-flags

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_flags.rs
