[package]
name = "enum-flags"
version = "0.1.1"
edition = "2018"
authors = ["YISH<mokeyish@hotmail.com>"]
description = "EnumFlags is a csharp like enum flags implementation."
license="MIT"
repository = "https://github.com/mokeyish/enum-flags"
keywords = ["enum", "bitflag", "flag", "bitflags", "enumflags"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn="1.0"
quote="1.0"
proc-macro2="1.0"
