[package]
name = "enum-flags"
version = "0.3.0-preview"
edition = "2018"
authors = ["YISH<mokeyish@hotmail.com>"]
description = "EnumFlags is a csharp like enum flags implementation."
license="MIT"
keywords = ["enum", "bitflag", "flag", "bitflags", "enumflags"]
homepage = "https://github.com/mokeyish/enum-flags"
repository = "https://github.com/mokeyish/enum-flags"
documentation = "https://docs.rs/enum-flags"


[lib]
proc-macro = true

[dependencies]
syn="1.0"
quote="1.0"
proc-macro2="1.0"
